EC2/V2-EC2.tf
#Provider
provider "aws" {
  region = "us-west-1"
}

#Resources
resource "aws_instance" "demo-server" {
  ami           = "ami-0cbd40f694b804622"
  instance_type = "t2.micro"
  key_name      = "NCAL"
}

#Security_groups
resource "aws_security_group" "demo-sg" {
  name        = "demo-sg"
  description = "Allow SSH"

  ingress {
    description     = "SSH access"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    cidr_blocks     = ["0.0.0.0/0"]
    security_groups = ["demo-sg"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "ssh-port"
  }
}
